<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">asamles</string>
	<string name="item">Item #</string>
    <string name="facebook_app_id">560343677415755</string>
    <string name="vk_app_id">4352648</string>
<!--Error-->
    <string name="error">Error!</string>
	<string name="json_error">JSON Error!</string>
	<string name="custom_view_dialog_error">Error while seting CustomView dialog!</string>
	<string name="blur_background_error">BlurBackground Error!</string>
	<string name="blur_task_error">Blur task Error!</string>
    <string name="close">Close</string>
<!--DialogsMain-->
	<string name="message">Message</string>
	<string name="title">Title</string>
    <string name="progress">Progress...</string>
	<string name="ok">Ok</string>
	<string name="set">Set</string>
	<string name="cancel">Cancel</string>
	<string name="colorpicker_title">Choose color</string>
	<string name="progress_save_message">Saving...</string>

	<string name="time_label">Time:</string>
    <string name="time_dialog_button">TimeDialog</string>
    <string name="alert_dialog_button">AlertDialog</string>
    <string name="seekbar_dialog_button">SeekbarDialog</string>
    <string name="progress_dialog_button">ProgressDialog</string>
    <string name="list_checkbox_button">ListCheckboxDialog</string>
    <string name="blurred_alert_dialog_button">BlurredAlertDialog</string>
    <string name="blurred_progress_dialog_button">BlurredProgressDialog</string>
    <string name="blurred_color_dialog_button">Color</string>
    <string name="color_label">BlurredColorPicker</string>
    <string name="blurred_custom_dialog_button">BlurredCustomDialog</string>
    
<!--Save-->
	<string name="photo_title">Make photo?</string>
	<string name="photo_message">Are you sure you want to make photo?</string>
	<string name="save_title">Save</string>
	<string name="save_message">Save your image to device Gallery?</string>
    <string name="save_new_message">Do you want to save this image as new or just rewrite it?</string>
    <string name="save_new_button">New</string>
    <string name="save_ok_button">Save</string>
	<string name="save_positive_result">Drawing saved to Gallery!</string>
	<string name="save_negative_result">Oops! Image could not be saved.</string>
	<string name="save_tag">drawing</string>
<!--Clear-->
	<string name="clear_title">Clear</string>
<!--PaintMain-->
	<string name="load_paint_title">Load from gallery</string>
	<string name="load_paint_message">Are you sure you want to load your drawing from Galary?</string>
	<string name="clear_paint_message">Are you sure you want to clear your drawing?</string>
    <string name="nothing_to_remove">Sorry, nothing to remove, longpressed to item to mark it</string>
	<string name="paint_gallery_remove_title">Remove images</string>
	<string name="paint_gallery_remove_message">Are you sure you want to remove %s images?</string>
<!--ImageEditMain-->
	<string name="opacity">Opacity</string>
	<string name="photo_edit_title">Make Photo</string>
	<string name="photo_edit_message">Are you sure you want to make photo?</string>
	<string name="load_edit_title">Load image</string>
	<string name="load_edit_message">Are you sure you want to load new image from Galary?</string>
	<string name="load_intent_title">Select picture</string>
	<string name="clear_edit_message">Are you sure you want to clear image?</string>
    <string name="load_negative_result">Sorry, there s mistake while loading your picture!</string>
    <string name="image_edit_error">This image large than expected, try to use smaller!</string>
    <string name="imageedit_pen_size">Pen size</string>
    <string name="controls">Controls</string>
    <string name="custom_dialog_list_icon">Icon</string>
    <string name="blurred_background">Blurred Background</string>
    <string name="time_dialog_checkbox_label">Active</string>
    <string name="location_title">Location</string>
    <string name="divider">Divider</string>
    <string name="location_message">Location:</string>
    <string name="location_play_service_button">Play Service</string>
    <string name="location_all_button">All</string>
    <string name="location_gps_network_button">GPS/Network</string>
    <string name="location_map_button">Check on map</string>
    <string name="imageedit_workspace">Workspace</string>
    <string name="up_activity_button">Activity</string>
    <string name="up_fragment_button">Fragment</string>
    <string name="social_facebook_button">{icon-facebook} Facebook login</string>
    <string name="social_twitter_button">{icon-twitter} Twitter login</string>
    <string name="social_google_button">{icon-gplus} G+ login</string>
    <string name="social_vk_button">{icon-vk} Vk login</string>
    <string name="sms_send_button">Send SMS</string>
    <string name="sms_send_intent_button">Send SMS Intent</string>
    <string name="share_tweet_web">tweet web</string>
    <string name="share_share_dialog_button">Share something</string>
    <string name="share_text">share via:</string>
    <string name="shake_button">Shake me!</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_left">Rotate left</string>
    <string name="flip_vertical">Flip vertical</string>
    <string name="flip_horizontal">Flip horizontal</string>
    <string name="imageedit_brightness">{icon-brightness}</string>
    <string name="iamgeedit_contrast">{icon-contrast}</string>
    <string name="imageedit_saturation">{icon-magic}</string>
    <string name="imageedit_rotate">{icon-undo}</string>
    <string name="imageedit_crop">{icon-crop}</string>
    <string name="imageedit_filter">{icon-image}</string>
    <string name="imageedit_sticker">{icon-tag}</string>
    <string name="grid_image_item">Grid image Item</string>
    <string name="up_step">Step </string>
    <string name="up_next_button">Next</string>
    <string name="card">Card</string>
    <string name="delete_card">Delete card</string>
    <string name="image">Image</string>
<!-- Menu -->
    <string name="menu_done_item">Done</string>
    <string name="menu_list_item">List</string>
    <string name="menu_photo">Photo</string>
    <string name="menu_load">Load</string>
    <string name="menu_save">Save</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete_item">Delete</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_erase">Erase</string>
    <string name="menu_pencil">Pencil</string>
    <string name="menu_color">Color</string>
    <string name="menu_size">Size</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_marker">markers</string>
    <string name="menu_share_widget">Share</string>
    <string name="menu_share">Share</string>
</resources>
