<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_dialog_button"
            android:id="@+id/time_dialog_button"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_button"
            android:id="@+id/alert_dialog_button"
            android:layout_below="@+id/time_dialog_button"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seekbar_dialog_button"
            android:id="@+id/seekbar_dialog_button"
            android:layout_below="@+id/alert_dialog_button"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_dialog_button"
            android:id="@+id/progress_dialog_button"
            android:layout_below="@+id/seekbar_dialog_button"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_checkbox_button"
            android:id="@+id/custom_dialog_button"
            android:layout_below="@+id/progress_dialog_button"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blurred_alert_dialog_button"
            android:id="@+id/blurred_alert_dialog_button"
            android:layout_below="@+id/custom_dialog_button"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blurred_progress_dialog_button"
            android:id="@+id/blurred_progress_dialog_button"
            android:layout_below="@+id/blurred_alert_dialog_button"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_label"
            android:id="@+id/textView4"
            android:layout_below="@+id/blurred_progress_dialog_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blurred_color_dialog_button"
            android:id="@+id/blurred_colorpicker_dialog_button"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blurred_custom_dialog_button"
            android:id="@+id/blurred_custom_dialog_button"
            android:layout_below="@+id/blurred_colorpicker_dialog_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>