<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/size_64"
    android:background="@color/dark"
    android:gravity="center_horizontal">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/horizontalScrollView"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size_4">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <IconButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brightness"
                android:background="@null"
                android:text="@string/imageedit_brightness"
                android:textSize="32sp"
                android:textColor="@color/grey_light"
                android:padding="@dimen/size_12" />

            <IconButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contrast"
                android:background="@null"
                android:layout_toRightOf="@+id/brightness"
                android:text="@string/iamgeedit_contrast"
                android:textSize="32sp"
                android:textColor="@color/grey_light"
                android:padding="@dimen/size_12" />

            <IconButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saturation"
                android:background="@null"
                android:layout_toRightOf="@+id/contrast"
                android:text="@string/imageedit_saturation"
                android:textSize="32sp"
                android:textColor="@color/grey_light"
                android:padding="@dimen/size_12" />

            <IconButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rotate"
                android:background="@null"
                android:layout_toRightOf="@+id/saturation"
                android:text="@string/imageedit_rotate"
                android:textSize="32sp"
                android:textColor="@color/grey_light"
                android:padding="@dimen/size_12" />

            <IconButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/crop"
                android:background="@null"
                android:layout_toRightOf="@+id/rotate"
                android:text="@string/imageedit_crop"
                android:textSize="32sp"
                android:textColor="@color/grey_light"
                android:padding="@dimen/size_12" />

            <IconButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/filter"
                android:background="@null"
                android:layout_toRightOf="@+id/crop"
                android:text="@string/imageedit_filter"
                android:textSize="32sp"
                android:textColor="@color/grey_light"
                android:padding="@dimen/size_12" />

            <IconButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sticker"
                android:background="@null"
                android:layout_toRightOf="@+id/filter"
                android:text="@string/imageedit_sticker"
                android:textSize="32sp"
                android:textColor="@color/grey_light"
                android:padding="@dimen/size_12" />
        </RelativeLayout>
    </HorizontalScrollView>
</RelativeLayout>