<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_64"
    android:id="@+id/bottm"
    android:background="@color/dark"
    android:gravity="center_horizontal">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/horizontalScrollView"
        android:padding="@dimen/size_4">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rotate_right"
                android:background="@null"
                android:padding="@dimen/size_12"
                android:contentDescription="@string/rotate_right" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rotate_left"
                android:background="@null"
                android:layout_toRightOf="@+id/rotate_right"
                android:padding="@dimen/size_12"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/rotate_left" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flip_vertical"
                android:background="@null"
                android:padding="@dimen/size_12"
                android:src="@drawable/ic_launcher"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/rotate_left"
                android:contentDescription="@string/flip_vertical" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flip_horizontal"
                android:background="@null"
                android:layout_toRightOf="@+id/flip_vertical"
                android:padding="@dimen/size_12"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/flip_horizontal" />
        </RelativeLayout>
    </HorizontalScrollView>
</RelativeLayout>